--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title> Nicholas St-Amour </title>
+    <title> Nicholas St-Amour - Achademic Website</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Nicholas St-Amour</h1>
+        </div>
+    </header>
+</body>
 
 </html>
