--- a/index.html
+++ b/index.html
@@ -10,8 +10,39 @@
     <header>
         <div class="container">
             <h1>Nicholas St-Amour</h1>
+            <p>Student in Data Science</p>
+            <nav>
+                <ul>
+                    <li><a herf="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a herf="cv.html">CV</a></li>
+                    <li><a herf="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-</body>
 
+    <main class="container">
+        <section id="intro">
+            <img src="images/profile.jpg" alt="Profile photo" class="profile-photo"/>
+            <h2>Welcome!</h2>
+            <p>
+                I'm a third year student in Data Science (Honours B.Sc. in Computer Science / Honours B.Sc. in Mathematics) at the University of Ottawa. This site shares my academic work and CV.
+            </p>
+        </section>
+
+        <section id="awards">
+            <h2>Awards</h2>
+            <ul>
+                <li><strong>Dean Honor List:</strong> 2023-Present</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>© 2025 Nicholas St-Amour. Last updated July 13 2025.</p>
+        </div>
+    </footer>
+</body>
 </html>
