--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <p>Student in Data Science</p>
             <nav>
                 <ul>
-                    <li><a herf="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a herf="cv.html">CV</a></li>
-                    <li><a herf="contact.html">Contact</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
