--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="cv.html">CV</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="hobbies.html">Hobbies</a></li>
                 </ul>
             </nav>
         </div>
