--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title> Nicholas St-Amour - Academic Website</title>
+    <p>nicholas.m.stamour@gmail.com</p>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -15,24 +16,21 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="cv.html">CV</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="hobbies.html">Hobbies</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="container">
-        <section id="intro">
-            <div style="text-align: center;">
+        <section id="Welcome">
             <img src="images/profile.jpg" alt="Profile photo" class="profile-photo"/>
-            <p>Graduation 2023 at ESC Garneau</p>
-            </div>
             <h2>Welcome!</h2>
             <p>I'm a third year student in Data Science
                 (Honours B.Sc. in Computer Science / Honours B.Sc. in Mathematics)
                 at the University of Ottawa.
                 I have found great intrest in my Computer Science classes,
-                especially learning how to make a website, creating application and graphs.
+                especially learning how to make a website, creating application and graphs theory.
                 This site shares my academic work, CV and hobbies.</p>
         </section>
     </main>
@@ -42,7 +40,7 @@
             <h2>Awards</h2>
             <ul>
                 <li><strong>Dean Honor List:</strong> 2023-Present</li>
-                <li>GPA: 9.68</li>
+                <li><strong>GPA:</strong> 9.68</li>
             </ul>
         </section>
     </main>
