hobbies mostly done

--- a/hobbies.html
+++ b/hobbies.html
@@ -35,10 +35,39 @@
                 Who knows — if you look closely, you might even notice that I bring the same level of effort and dedication to my hobbies as I do to my professional pursuits.
             </p>
         </section>
-        <section id="Hobbies">
+        <section id="Hobbies"> 
             <h2>Triathlon</h2>
-            
+            <p>
+                Triathlon has become one of my favorite sports. I find the training incredibly rewarding—there's a clear connection between the effort I put in and the improvements I see in my fitness. I enjoy pushing my limits during races as a way to challenge myself and prove what I'm capable of. While I'm proud of all my races, my favorite is the personal triathlon I complete every year on my birthday. 
+            </p>
+            <p>
+                I started this tradition in 2024 at age 19 and plan to continue it for as long as I can. The format is simple: I swim <code>x</code> * 100m, bike <code>x</code> * 5km, and run <code>x</code> * 1km—where <code>x</code> is my age. Since these exact distances don't match any official race, I complete it on my own, which adds an extra level of challenge and meaning.
+            </p>
+
             <h2>Backpacking & Canoe-Camping</h2>
+            <p>
+                In 2024, I went on my first backpacking trip, and it was an unforgettable experience. We hiked 30 km over three days with heavy packs through the crisp October weather in Frontenac Park. I quickly fell in love with the trails and the peacefulness of nature—I didn't want to leave.
+            </p>
+            <p>
+                In 2025, I planned to go backpacking again, but a stress fracture forced a change of plans. Instead, I rented a canoe and went canoe-camping. It turned out to be an equally rewarding way to explore the outdoors, and now both activities have become important parts of how I connect with nature.
+            </p>
+
+            <h2>Trips</h2>
+            <p>
+                In 2025, I took my first trip abroad—to Portugal—and absolutely loved it. My girlfriend and I focused on meaningful experiences throughout the two-week adventure. I hiked a 300m mountain to a castle in Sintra, walked along the stunning cliffs in Lagos, kayaked in its coastal waters, biked 80 km across rough terrain, and even learned to surf near Porto.
+            </p>
+            <p>
+                That trip sparked a passion for travel, and I'm excited to explore more of the world in the years to come.
+            </p>
+            
+            <h2>Reading</h2>
+            <p>
+                Reading is a passion I've recently reconnected with. I realized I was spending too much time on my phone and found that I'm much more focused and motivated when I leave it behind. 
+            </p>
+            <p>
+                To break that habit, I turned back to something I loved growing up—getting lost in books. It's been a great way to unwind, learn, and stay present, and I've been steadily building it back into my routine.
+            </p>
+
         </section>
     </main>
 </body>
