--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title> Nicholas St-Amour - Contact</title>
+    <title> Nicholas St-Amour - Hobbies</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -38,34 +38,41 @@
         <section id="Hobbies"> 
             <h2>Triathlon</h2>
             <p>
-                Triathlon has become one of my favorite sports. I find the training incredibly rewarding—there's a clear connection between the effort I put in and the improvements I see in my fitness. I enjoy pushing my limits during races as a way to challenge myself and prove what I'm capable of. While I'm proud of all my races, my favorite is the personal triathlon I complete every year on my birthday. 
+                Triathlon has become my favorite sports. I find the training incredibly rewarding! There's a clear connection between the effort I put in and the improvements I see in my fitness. I enjoy pushing my limits during races as a way to challenge myself and prove what I'm capable of. While I'm proud of all my races, my favorite is the personal triathlon I complete every year on my birthday. 
             </p>
             <p>
-                I started this tradition in 2024 at age 19 and plan to continue it for as long as I can. The format is simple: I swim <code>x</code> * 100m, bike <code>x</code> * 5km, and run <code>x</code> * 1km—where <code>x</code> is my age. Since these exact distances don't match any official race, I complete it on my own, which adds an extra level of challenge and meaning.
+                I started this tradition in 2024 at age 19 and plan to continue it for as long as I can. The format is simple. Suppose a is my age. I swim a*100m, bike a*5km, and run a*1km. Since these distances don't match any official race, I complete it on my own, which adds an extra level of challenge and meaning.
             </p>
 
             <h2>Backpacking & Canoe-Camping</h2>
             <p>
-                In 2024, I went on my first backpacking trip, and it was an unforgettable experience. We hiked 30 km over three days with heavy packs through the crisp October weather in Frontenac Park. I quickly fell in love with the trails and the peacefulness of nature—I didn't want to leave.
+                In 2024, I went on my first backpacking trip, and it was an unforgettable experience. We hiked 30 km over three days with heavy packs through the crisp October weather in Frontenac Park, Ontario. I quickly fell in love with the trails and the peacefulness of nature.
             </p>
             <p>
-                In 2025, I planned to go backpacking again, but a stress fracture forced a change of plans. Instead, I rented a canoe and went canoe-camping. It turned out to be an equally rewarding way to explore the outdoors, and now both activities have become important parts of how I connect with nature.
+                In 2025, I planned to go backpacking again, but a stress fracture forced a change of plans. Instead, I brough my canoe to Kawartha Highlands and went canoe-camping. It turned out to be an equally rewarding way to explore the outdoors, covering 33.5km! I even got the oportunity to have my own private island for one night! Both activities have become important parts of how I connect with nature.
             </p>
 
             <h2>Trips</h2>
             <p>
-                In 2025, I took my first trip abroad—to Portugal—and absolutely loved it. My girlfriend and I focused on meaningful experiences throughout the two-week adventure. I hiked a 300m mountain to a castle in Sintra, walked along the stunning cliffs in Lagos, kayaked in its coastal waters, biked 80 km across rough terrain, and even learned to surf near Porto.
+                In 2025, I took my first trip abroad, to Portugal! I absolutely loved it. My girlfriend and I focused on meaningful experiences throughout the two week adventure. I hiked a 300m mountain to a castle in Sintra, walked along the stunning cliffs in Lagos, kayaked in its coastal waters, biked 80 km across rough terrain, and even learned to surf near Porto.
             </p>
             <p>
-                That trip sparked a passion for travel, and I'm excited to explore more of the world in the years to come.
+                That trip sparked a passion for travel, and I'm excited to have more meaningful experiences around the world in the years to come.
             </p>
             
-            <h2>Reading</h2>
+            <h2>Reading & Puzzles</h2>
             <p>
                 Reading is a passion I've recently reconnected with. I realized I was spending too much time on my phone and found that I'm much more focused and motivated when I leave it behind. 
             </p>
             <p>
-                To break that habit, I turned back to something I loved growing up—getting lost in books. It's been a great way to unwind, learn, and stay present, and I've been steadily building it back into my routine.
+                To break that habit, I turned back to something I loved growing up, getting lost in books. It's been a great way to unwind, learn, and stay present, and I've been steadily building it back into my routine.
+            </p>
+            <h2>Sudoku</h2>
+            <p>
+                Sudoku is another passion I've reconnected with recently. Lately, I've explored new variations of the puzzle, such as Killer Sudoku, which adds a mathematical twist. In this version, you can start with no numbers given at all, only the sums of small groups of cells to guide you. 
+            </p>
+            <p>
+                My first solve of these numberless puzzles took over an hour, but with practice, I've brought my best time to about ten minutes. It's a fun way to challenge my problem-solving skills and keep my mind sharp.
             </p>
 
         </section>
