--- a/about.html
+++ b/about.html
@@ -7,18 +7,11 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Nicholas St-Amour</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="cv.html">CV</a></li>
-                    <li><a href="hobbies.html">Hobbies</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="header"></div>
+    <script>
+    fetch("header.html")
+      .then(response => response.text())
+      .then(data => document.getElementById("header").innerHTML = data);
+    </script>
 </body>
 </html>
