--- a/hobbies.html
+++ b/hobbies.html
@@ -7,34 +7,23 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Nicholas St-Amour</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="cv.html">CV</a></li>
-                    <li><a href="hobbies.html">Hobbies</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id = "header"></div>
+    <script>
+        fetch("header.html")
+        .then(response => response.text())
+        .then(data => document.getElementById("header").innerHTML = data);
+    </script>
 
     <main class="container">
         <section id="Introduction">
-            <h2>The section below outlines several of my personal interests. (Option 1)</h2>
-            <p>
-                While the presentation here is more casual and informal in tone,
-                it is intended to offer additional perspective on my personality, creativity, and interests beyond academic and professional work.
-            </p>
-            <h2>Here are a few of my hobbies! (Option 2)</h2>
+            <h2>Here are a few of my hobbies!</h2>
             <p>
                 This section takes a more relaxed and informal tone than the rest of my site,
                 but I hope it offers a clearer picture of who I am beyond work.
                 Who knows — if you look closely, you might even notice that I bring the same level of effort and dedication to my hobbies as I do to my professional pursuits.
             </p>
         </section>
+
         <section id="Hobbies"> 
             <h2>Triathlon</h2>
             <p>
