--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title> Nicholas St-Amour - Academic Website</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Nicholas St-Amour</h1>
-            <p>nicholas.m.stamour@gmail.com</p>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="cv.html">CV</a></li>
-                    <li><a href="hobbies.html">Hobbies</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="header"></div>
+    <script>
+        fetch("header.html")
+        .then(response => response.text())
+        .then(data => document.getElementById("header").innerHTML = data);
+    </script>
 
     <main class="container">
         <section id="Welcome">
