--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title> Nicholas St-Amour - Hobbies</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="images/favicon-32.ico">
 </head>
 <body>
     <div id = "header"></div>
