--- a/cv.html
+++ b/cv.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title> Nicholas St-Amour - CV</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="images/favicon-32.ico">
 </head>
 <body>
     <div id="header"></div>
     <script>
         fetch("header.html")
         .then(response => response.text())
-        .then(data => document.getElementById("fetch").innerHTML = data);
+        .then(data => document.getElementById("header").innerHTML = data);
     </script>
 
     <main class="container">
