--- a/header.html
+++ b/header.html
@@ -1,11 +1,11 @@
 <header>
     <div class="container">
         <h1>Nicholas St-Amour</h1>
-        <h2><strong>nicholas.m.stamour@gmail.com   |   (613) 315-1395</strong></h2>
+        <p><strong>nicholas.m.stamour@gmail.com    |    (613) 315-1395</strong></p>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
