renamed CV to resume, again more visual changes

--- a/hobbies.html
+++ b/hobbies.html
@@ -26,6 +26,14 @@
         </section>
 
         <section id="Hobbies"> 
+            <h2>Sudoku</h2>
+            <p>
+                Sudoku is a passion I've reconnected with recently. Lately, I've explored new variations of the puzzle, such as Killer Sudoku, which adds a mathematical twist. In this version, you can start with no numbers given at all, only the sums of small groups of cells to guide you. 
+            </p>
+            <p>
+                My first solve of these numberless puzzles took over an hour, but with practice, I've brought my best time to about ten minutes. It's a fun way to challenge my problem-solving skills and keep my mind sharp.
+            </p>
+            
             <h2>Triathlon</h2>
             <p>
                 Triathlon has become my favorite sports. I find the training incredibly rewarding! There's a clear connection between the effort I put in and the improvements I see in my fitness. I enjoy pushing my limits during races as a way to challenge myself and prove what I'm capable of. While I'm proud of all my races, my favorite is the personal triathlon I complete every year on my birthday. 
@@ -50,21 +58,13 @@
                 That trip sparked a passion for travel, and I'm excited to have more meaningful experiences around the world in the years to come.
             </p>
             
-            <h2>Reading & Puzzles</h2>
+            <h2>Reading</h2>
             <p>
-                Reading is a passion I've recently reconnected with. I realized I was spending too much time on my phone and found that I'm much more focused and motivated when I leave it behind. 
+                Reading is another passion I've recently reconnected with. I realized I was spending too much time on my phone and found that I'm much more focused and motivated when I leave it behind. 
             </p>
             <p>
                 To break that habit, I turned back to something I loved growing up, getting lost in books. It's been a great way to unwind, learn, and stay present, and I've been steadily building it back into my routine.
             </p>
-            <h2>Sudoku</h2>
-            <p>
-                Sudoku is another passion I've reconnected with recently. Lately, I've explored new variations of the puzzle, such as Killer Sudoku, which adds a mathematical twist. In this version, you can start with no numbers given at all, only the sums of small groups of cells to guide you. 
-            </p>
-            <p>
-                My first solve of these numberless puzzles took over an hour, but with practice, I've brought my best time to about ten minutes. It's a fun way to challenge my problem-solving skills and keep my mind sharp.
-            </p>
-
         </section>
     </main>
 </body>
