--- a/index.html
+++ b/index.html
@@ -25,16 +25,9 @@
                 I have found great intrest in my Computer Science classes,
                 especially learning how to make a website, creating application and graphs theory.
                 This site shares my academic work, CV and hobbies.</p>
-        </section>
-    </main>
+                <p>Feel free to explore my website. You'll find detailed information about my personal projects under the "Projects" tab,
+                     my resume under "Resume", and a glimpse into my hobbies under "Hobbies" if you'd like to get to know me better.</p>
 
-    <main class="container">
-        <section id="awards">
-            <h2>Awards</h2>
-            <ul>
-                <li><strong>Dean Honor List:</strong> 2023-Present</li>
-                <li><strong>GPA:</strong> 9.68</li>
-            </ul>
         </section>
     </main>
 
