--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <header>
     <div class="container">
         <h1>Nicholas St-Amour</h1>
-        <p><strong>nicholas.m.stamour@gmail.com    |    (613) 315-1395</strong></p>
+        <h3>nicholas.m.stamour@gmail.com | (613) 315-1395</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
         </nav>
