--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title> Nicholas St-Amour - CV</title>
+    <title> Nicholas St-Amour - Resume</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/x-icon" sizes="32x32" href="images/favicon-32.ico">
 </head>
@@ -44,8 +44,8 @@
 
     <h2><strong>EDUCATION</strong></h2>
     <hr>
-    <h3>Honours BSc in Mathematics and Computer Science (Data Science) | May 2024 - Present</h3>
-    <h3>Honours BSc Physics-Mathematics (Transferred to above program) | Sep 2023 - May 2024</h3>
+    <p><strong>BSc in Mathematics and Computer Science (Data Science)</strong> | May 2024 - Present</p>
+    <p><strong></strong>Honours BSc Physics-Mathematics (Transferred to above program)</strong> | Sep 2023 - May 2024</p>
     <p>University of Ottawa, Ottawa, ON</p>
     <ul>
         <li>Course progression equivalent to direct-entry Data Science students</li>
@@ -56,21 +56,21 @@
 
     <h2><strong>PROGRAMMING PROJECTS</strong></h2>
     <hr>
-    <h3>Full-Stack Hotel Booking System (Completed) | Node.js, PostgreSQL, React, CSS | Mar 2025</h3>
+    <p><strong>Full-Stack Hotel Booking System (Completed)</strong> | Node.js, PostgreSQL, React, CSS | Mar 2025</p>
     <ul>
         <li>Developed a web application enabling users to sign in, view listings, and make reservations</li>
         <li>Implemented <strong>front-end</strong> interface using React and CSS for enhanced user experience</li>
         <li>Utilized PostgreSQL with PgAdmin 4 for <strong>database design and management</strong>, handling user authentication and booking records</li>
     </ul>
 
-    <h3>Software Development (Completed) | Java, XML, SQLite, Android Studio | Sep 2024 - Dec 2024</h3>
+    <p><strong>Software Development (Completed)</strong> | Java, XML, SQLite, Android Studio | Sep 2024 - Dec 2024</p>
     <ul>
         <li>Utilized SQLite for database management focusing on usability and reusability</li>
         <li>Integrated 7 JUnit tests to validate outputs and facilitate debugging</li>
         <li><strong>Collaborated with a team of four</strong> using GitHub, conducting weekly meetings to resolve challenges</li>
     </ul>
 
-    <h3>Adaptive Tic Tac Toe Game (Completed) | Java | Jun 2024</h3>
+    <p><strong>Adaptive Tic Tac Toe Game (Completed)</strong> | Java | Jun 2024</p>
     <ul>
         <li>Engineered a scalable tic tac toe game supporting variable grid sizes and win conditions</li>
         <li>Developed a computer opponent to further push my work</li>
@@ -78,8 +78,7 @@
 
     <h2><strong>WORK EXPERIENCE</strong></h2>
     <hr>
-    <h3>Head Lifeguard/Instructor</h3>
-    <p>City of Ottawa, Splash Wave Pool | Jun 2024 - Present</p>
+    <p><strong>Head Lifeguard/Instructor</strong> | City of Ottawa, Splash Wave Pool | Jun 2024 - Present</p>
     <ul>
         <li><strong>Led two teams of 9 instructors</strong> through 8 weeks of lessons, mentoring them on teaching methods and providing constructive feedback tailored to individual needs</li>
         <li><strong>Led team of 17 lifeguards</strong> during over 20 times waves swims</li>
@@ -87,8 +86,7 @@
         <li>Managed administrative tasks, scheduling, ensuring smooth program operations</li>
     </ul>
 
-    <h3>Advanced Aquatics Instructor</h3>
-    <p>City of Ottawa - Splash Wave Pool, Ottawa, ON | May 2022 - Present</p>
+    <p><strong>Advanced Aquatics Instructor</strong> City of Ottawa - Splash Wave Pool, Ottawa, ON | May 2022 - Present</p>
     <ul>
         <li>Delivered advanced lifeguarding training programs for candidates aged 14+, achieving a 100% pass rate</li>
         <li>Developed <strong>lesson plans</strong> to cover training material within a 20 hour course</li>
@@ -96,12 +94,10 @@
         <li><strong>Evaluated</strong> candidates' performance throughout the course, completing a test sheet to determine Pass/Fail</li>
     </ul>
 
-    <h3>Lifeguard & Swim Instructor</h3>
-    <p>City of Ottawa, Splash Wave Pool | Nov 2021 - Present </p>
+    <p><strong>Lifeguard & Swim Instructor</strong> City of Ottawa, Splash Wave Pool | Nov 2021 - Present </p>
     <ul>
         <li>Adapted and delivered swimming lessons for ages 4 months to 99 years old, developing strong skills in <strong>patience, clarity and encouraging participation</strong></li>
         <li><strong>Respond to medical and water emergencies</strong>, including seizures and distressed swimmers, demonstrating the ability to <strong>stay composed</strong> and make <strong>critical, time-sensitive</strong> decisions under pressure</li>
-        <li></li>
     </ul>
     </main>
 </body>
