--- a/projects.html
+++ b/projects.html
@@ -14,5 +14,17 @@
       .then(response => response.text())
       .then(data => document.getElementById("header").innerHTML = data);
     </script>
+
+    <footer>
+        <div class="container">
+            <p id=last-updated></p>
+            <script>
+                // Format: July 13, 2025
+                const options = { year: 'numeric', month: 'long', day: 'numeric' };
+                const updated = new Date(document.lastModified).toLocaleDateString(undefined, options);
+                document.getElementById('last-updated').textContent = `© 2025 Nicholas St-Amour. Last updated ${updated}.`;
+            </script>
+        </div>
+    </footer>
 </body>
 </html>
