--- a/resume.html
+++ b/resume.html
@@ -18,36 +18,35 @@
     <main class="container">
     <h2><strong>SUMMARY OF QUALIFICATIONS</strong></h2>
     <hr>
-    <p>
-        <ul>
-            <li><strong>Third year student in Data Science at thhe University of Ottawa (GPA: 9.68, Dean's Honour List)</strong></li>
-            <li>Proven leadership and teaching abilities developed through 3+ years of lifeguarding and 1 year as an Aquatic Supervisor</li>
-            <li>Strong communicator with a demonstrated ability to work effectively in team environments</li>
-            <li>Taught <strong>800+ students</strong> in swimming lessons and lifeguarding courses as well as mentored 50+ lifeguards</li>
-        </ul>
+    <ul>
+        <li><strong>Third year student in Data Science at thhe University of Ottawa (GPA: 9.68, Dean's Honour List)</strong></li>
+        <li>Proven leadership and teaching abilities developed through 3+ years of lifeguarding and 1 year as an Aquatic Supervisor</li>
+        <li>Strong communicator with a demonstrated ability to work effectively in team environments</li>
+        <li>Taught <strong>800+ students</strong> in swimming lessons and lifeguarding courses as well as mentored 50+ lifeguards</li>
+    </ul>
     </p>
 
     <h2><strong>SKILLS</strong></h2>
     <hr>
     <h3>Technical Skills</h3>
-    <ul>
+    <ul class="stick">
         <li>Programming Languages: Python, Java, SQL (SQLite, PostgreSQL), Go, Prolog, Scheme</li>
         <li>Web Development: React, Node.js, CSS, HTML</li>
         <li>Tools & Platforms: GitHub, VS Code, PgAdmin 4, Eclipse, Android Studio, JUnit</li>
     </ul>
 
     <h3>Soft Skills</h3>
-    <ul>
+    <ul class="stick">
         <li>Problem-solving, critical thinking & conflict resolution</li>
         <li>Communication, leadership, time management & organization</li>
     </ul>
 
     <h2><strong>EDUCATION</strong></h2>
     <hr>
-    <h4>BSc in Mathematics and Computer Science (Data Science)| May 2024 - Present</h4>
+    <h4>Hounours BSc in Mathematics and Computer Science (Data Science) | May 2024 - Present</h4>
     <h4>Honours BSc Physics-Mathematics (Transferred to above program) | Sep 2023 - May 2024</h4>
-    <p class="detail">University of Ottawa, Ottawa, ON</p>
-    <ul>
+    <p class="stick">University of Ottawa, Ottawa, ON</p>
+    <ul class="stick">
         <li>Course progression equivalent to direct-entry Data Science students</li>
         <li>GPA: 9.68 | Dean's Honour List, University of Ottawa, ON (2023 - 2025)</li>
         <li>2000$ Admission Scholarship, University of Ottawa, ON (2023 - 2024)</li>
@@ -57,23 +56,24 @@
     <h2><strong>PROGRAMMING PROJECTS</strong></h2>
     <hr>
     <h4>Full-Stack Hotel Booking System (Completed)</h4>
-    <p>Node.js, PostgreSQL, React, CSS | Mar 2025</p>
-    <ul>
+    <p class="stick">Node.js, PostgreSQL, React, CSS | Mar 2025</p>
+    <ul class="stick">
         <li>Developed a web application enabling users to sign in, view listings, and make reservations</li>
         <li>Implemented <strong>front-end</strong> interface using React and CSS for enhanced user experience</li>
         <li>Utilized PostgreSQL with PgAdmin 4 for <strong>database design and management</strong>, handling user authentication and booking records</li>
     </ul>
 
     <h4>Software Development (Completed)</h4>
-    <p>Java, XML, SQLite, Android Studio | Sep 2024 - Dec 2024</p>
-    <ul>
+    <p class="stick">Java, XML, SQLite, Android Studio | Sep 2024 - Dec 2024</p>
+    <ul class="stick">
         <li>Utilized SQLite for database management focusing on usability and reusability</li>
         <li>Integrated 7 JUnit tests to validate outputs and facilitate debugging</li>
         <li><strong>Collaborated with a team of four</strong> using GitHub, conducting weekly meetings to resolve challenges</li>
     </ul>
 
-    <h4>Adaptive Tic Tac Toe Game (Completed) | Java | Jun 2024</h4>
-    <ul>
+    <h4>Adaptive Tic Tac Toe Game (Completed)</h4>
+    <p class="stick">Java | Jun 2024</p>
+    <ul class="stick">
         <li>Engineered a scalable tic tac toe game supporting variable grid sizes and win conditions</li>
         <li>Developed a computer opponent to further push my work</li>
     </ul>
@@ -81,8 +81,8 @@
     <h2><strong>WORK EXPERIENCE</strong></h2>
     <hr>
     <h4>Head Lifeguard/Instructor</h4>
-    <p>City of Ottawa, Splash Wave Pool | Jun 2024 - Present</p>
-    <ul>
+    <p class="stick">City of Ottawa, Splash Wave Pool | Jun 2024 - Present</p>
+    <ul class="stick">
         <li><strong>Led two teams of 9 instructors</strong> through 8 weeks of lessons, mentoring them on teaching methods and providing constructive feedback tailored to individual needs</li>
         <li><strong>Led team of 17 lifeguards</strong> during over 20 times waves swims</li>
         <li>Resolved conflicts and maintained a positive working environment through clear, professional communication with staff and patrons</li>
@@ -90,8 +90,8 @@
     </ul>
 
     <h4>Advanced Aquatics Instructor</h4>
-    <p>City of Ottawa - Splash Wave Pool, Ottawa, ON | May 2022 - Present</p>
-    <ul>
+    <p class="stick">City of Ottawa - Splash Wave Pool, Ottawa, ON | May 2022 - Present</p>
+    <ul class="stick">
         <li>Delivered advanced lifeguarding training programs for candidates aged 14+, achieving a 100% pass rate</li>
         <li>Developed <strong>lesson plans</strong> to cover training material within a 20 hour course</li>
         <li>Taught students with varying skill levels, while managing <strong>classroom-like environments</strong>, resolving conflicts and maintaining positive communication, a teaching approach directly applicable to TA sessions</li>
@@ -99,11 +99,23 @@
     </ul>
 
     <h4>Lifeguard & Swim Instructor</h4>
-    <p>City of Ottawa, Splash Wave Pool | Nov 2021 - Present </p>
-    <ul>
+    <p class="stick">City of Ottawa, Splash Wave Pool | Nov 2021 - Present </p>
+    <ul class="stick">
         <li>Adapted and delivered swimming lessons for ages 4 months to 99 years old, developing strong skills in <strong>patience, clarity and encouraging participation</strong></li>
         <li><strong>Respond to medical and water emergencies</strong>, including seizures and distressed swimmers, demonstrating the ability to <strong>stay composed</strong> and make <strong>critical, time-sensitive</strong> decisions under pressure</li>
     </ul>
     </main>
+
+    <footer>
+        <div class="container">
+            <p id=last-updated></p>
+            <script>
+                // Format: July 13, 2025
+                const options = { year: 'numeric', month: 'long', day: 'numeric' };
+                const updated = new Date(document.lastModified).toLocaleDateString(undefined, options);
+                document.getElementById('last-updated').textContent = `© 2025 Nicholas St-Amour. Last updated ${updated}.`;
+            </script>
+        </div>
+    </footer>
 </body>
 </html>
