trying again to remove margins

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     <h2><strong>SUMMARY OF QUALIFICATIONS</strong></h2>
     <hr>
     <ul>
-        <li><strong>Third year student in Data Science at thhe University of Ottawa (GPA: 9.68, Dean's Honour List)</strong></li>
+        <li><strong>Third year student in Data Science at the University of Ottawa (GPA: 9.68, Dean's Honour List)</strong></li>
         <li>Proven leadership and teaching abilities developed through 3+ years of lifeguarding and 1 year as an Aquatic Supervisor</li>
         <li>Strong communicator with a demonstrated ability to work effectively in team environments</li>
         <li>Taught <strong>800+ students</strong> in swimming lessons and lifeguarding courses as well as mentored 50+ lifeguards</li>
