--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <script>
-    fetch("header.html")
-      .then(response => response.text())
-      .then(data => document.getElementById("header").innerHTML = data);
-    </script>
+    <script src="js/header.js" defer></script>
 
     <footer>
         <div class="container">
