more modifications to slidesohw

--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
     <footer>
         <div class="container">
             <p id=last-updated></p>
-            <script>
-                // Format: July 13, 2025
-                const options = { year: 'numeric', month: 'long', day: 'numeric' };
-                const updated = new Date(document.lastModified).toLocaleDateString(undefined, options);
-                document.getElementById('last-updated').textContent = `© 2025 Nicholas St-Amour. Last updated ${updated}.`;
-            </script>
         </div>
     </footer>
+    <script src="js/footer.js"></script>
 </body>
 </html>
