--- a/hobbies.html
+++ b/hobbies.html
@@ -38,11 +38,13 @@
                 I started this tradition in 2024 at age 19 and plan to continue it for as long as I can. The format is simple. Suppose a is my age. I swim a*100m, bike a*5km, and run a*1km. Since these distances don't match any official race, I complete it on my own, which adds an extra level of challenge and meaning.
             </p>
             <div class="slideshow-container">
-            <div class="slide"><img src="images/Triatlon-bike1.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-swim1.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-run1.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-bike2.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-swim2.jpg"></div>
+                <div class="slide"><img src="images/Triatlon-bike1.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-swim1.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-run1.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-bike2.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-swim2.jpg"></div>
+                <a class="prev">&#10094;</a>
+                <a class="next">&#10095;</a>    
             </div>
 
             <h2>Backpacking & Canoe-Camping</h2>
@@ -53,10 +55,12 @@
                 In 2025, I planned to go backpacking again, but a stress fracture forced a change of plans. Instead, I brough my canoe to Kawartha Highlands and went canoe-camping. It turned out to be an equally rewarding way to explore the outdoors, covering 33.5km! I even got the oportunity to have my own private island for one night! Both activities have become important parts of how I connect with nature.
             </p>
             <div class="slideshow-container">
-            <div class="slide"><img src="images/backpacking1.jpg"></div>
-            <div class="slide"><img src="images/backpacking2.jpg"></div>
-            <div class="slide"><img src="images/canoe-camping1.jpg"></div>
-            <div class="slide"><img src="images/canoe-camping2.jpg"></div>
+                <div class="slide"><img src="images/backpacking1.jpg"></div>
+                <div class="slide"><img src="images/backpacking2.jpg"></div>
+                <div class="slide"><img src="images/canoe-camping1.jpg"></div>
+                <div class="slide"><img src="images/canoe-camping2.jpg"></div>
+                <a class="prev">&#10094;</a>
+                <a class="next">&#10095;</a>
             </div>
 
             <h2>Trips</h2>
@@ -67,11 +71,13 @@
                 That trip sparked a passion for travel, and I'm excited to have more meaningful experiences around the world in the years to come.
             </p>
             <div class="slideshow-container">
-            <div class="slide"><img src="images/Triatlon-bike1.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-swim1.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-run1.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-bike2.jpg"></div>
-            <div class="slide"><img src="images/Triathlon-swim2.jpg"></div>
+                <div class="slide"><img src="images/Triatlon-bike1.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-swim1.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-run1.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-bike2.jpg"></div>
+                <div class="slide"><img src="images/Triathlon-swim2.jpg"></div>
+                <a class="prev">&#10094;</a>
+                <a class="next">&#10095;</a>    
             </div>
             
             <h2>Reading</h2>
@@ -86,15 +92,10 @@
 
     <footer>
         <div class="container">
-            <p id=last-updated></p>
-            <script>
-                // Format: July 13, 2025
-                const options = { year: 'numeric', month: 'long', day: 'numeric' };
-                const updated = new Date(document.lastModified).toLocaleDateString(undefined, options);
-                document.getElementById('last-updated').textContent = `© 2025 Nicholas St-Amour. Last updated ${updated}.`;
-            </script>
+            <p id="last-updated"></p>
         </div>
     </footer>
+    <script src="js/footer.js"></script>
     <script src="js/slideshow.js"></script>
 </body>
 </html>
