more play with margins, a lot of modifications in css

--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,15 @@
     <div id="header"></div>
     <script src="js/header.js" defer></script>
 
-    <footer>
-        <div class="container">
-            <p id=last-updated></p>
-        </div>
-    </footer>
+    <h2>Here are all the projects I've done</h2>
+    <p></p>
+
+
+
+
+
+
+    <footer><div class="container"><p id=last-updated></p></div></footer>
     <script src="js/footer.js"></script>
 </body>
 </html>
